--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ IF (BUILD_SAMPLES_1_5)
     ADD_SUBDIRECTORY(02_odd_even)
     ADD_SUBDIRECTORY(03_armstrong)
     ADD_SUBDIRECTORY(04_display_book)
-    ADD_SUBDIRECTORY(05_program)
+	ADD_SUBDIRECTORY(05_program)
 ENDIF ()
 
 IF (BUILD_SAMPLES_6_9)
@@ -43,6 +43,7 @@ ENDIF()
 IF (BUILD_SAMPLES_21_30)
 	ADD_SUBDIRECTORY(21_sample_feline)
 	ADD_SUBDIRECTORY(22_sample_kitty_exe)
+	ADD_SUBDIRECTORY(23_sfml_game_of_life)
 	ADD_SUBDIRECTORY(24_shared_feline_lib)
 	ADD_SUBDIRECTORY(25_shared_lion_lib)
 	ADD_SUBDIRECTORY(26_shared_cats)
